Ship 2.2.0 progression, Pack Mule, and compatibility updates